opam-version: "2.0"
version: "v0.12.0"
synopsis: "async_udp"
description: """
Temporary shim to get back the Async Udp lost from async_extra in v0.12.
"""
maintainer: "Michael Bacarella <michael.bacarella@gmail.com>"
authors: ["Michael Bacarella <michael.bacarella@gmail.com>"]
homepage: "https://github.com/mbacarella/async_udp"
bug-reports: "Michael Bacarella <michael.bacarella@gmail.com>"
build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "async" {>= "v0.12" & < "v0.13"}
]
